# classcompass

./: .gitignore  Dockerfile  README.md  WEB_GUI.md  config_editor.py  constants.py  exec.sh  pyproject.toml  setup.sh  setupconfig.py  setupdb.py
.github/workflows/: classCompass_docker.yml  classCompass_docker_arm_experimental.yml  classCompass_docker_arm_stable.yml  classCompass_docker_experimental.yml  classCompass_docker_pre.yml  classCompass_docker_stable.yml
constants/: __init__.py
main/: athena.py  configReader.py
main/_alert/: notificationDatahandler.py  telegramBot.py
main/_calendar/: calendarDataHandler.py  google_cal_connector.py
main/_database/: sqliteConnector.py
main/_logging/: logger.py
main/_maintenance/: databaseMaint.py  dbmaint.py  logMaint.py
main/_schedule/: untisDataHandler.py  untis_connector.py
main/calendar/: calendarDataHandler.py
main/database/: sqliteConnector.py
main/schedule/: untisDataHandler.py  untis_connector.py
setup/: Dockerfile  Dockerfile_experimental  Dockerfile_local  Dockerfile_stable  requirements.txt  setupconfig.py  setupdb.py
setup/sql/: createDiff.sql  createNotification.sql
sql/: createClasses.sql
templates/: config_editor.html
tooling/: flush_calendar.py  shareCalendar.py
web/: app.py
web/templates/: base.html  config.html  dashboard.html  database.html  edit_credentials.html  environment.html
