# Source - https://stackoverflow.com/a
# Posted by Niko Fohr, modified by community. See post 'Timeline' for change history
# Retrieved 2025-11-13, License - CC BY-SA 4.0

[project]
name = "constants"
version = "0.1.0"
description = "constants for classcompass"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
